Current Version: @@VERSION@@

ctags-5.5.1 (Thu Jul 17 2003)
* Restored exit of program after --help, --license, and --version options [Bug
  #717311, #751240].
* Added support for tags for labels [PL/SQL].
* Added support for tags for constant definitions [PHP].
* Changed supported tag kinds for Verilog parser during overhaul.
* Fixed missing tags for definitions spanning lines [Verilog, Bug #726875].
* Fixed compilation error for uncommon hosts.
* Fixed missing tags for Korn shell specific function definitions. [Sh,
  Bug #769184]
* Fixed missing tags when semicolon separator appears [Fortran, Bug #734933].
* Fixed missing tags when endsubroutine keyword appears [Fortran, Bug #726712].
* Fixed missing tags for nested blocks [PL/SQL, Bug #722501].
* Fixed missing tags for function typedefs [C].
* Fixed inability to map empty extension when path contained dot [Bug #742689].

ctags-5.5 (Tue Apr 1 2003)
* Changed kind indicator for methods from 'f' to 'm' [Tcl].
* Changed tags within interfaces to be disabled by default (like prototypes in
  C/C++) [Fortran].
* Removed explicit descriptions of individual --<LANG>-types options from
  --help output. See new --list-languages and --list-kinds options.
* Removed explicit list of supported languages and supported tag kinds and
  mapping patterns from man page. See new --list-languages, --list-kinds, and
  --list-maps options.
* Renamed --<LANG>-types option to --<LANG>-kinds (still accepts old name).
* Added --list-kinds option.
* Added --list-maps option.
* Added --list-languages option.
* Added support for dimensioned variables, contributed by Simon Bohlin [ASP].
* Added support for C# language.
* Added support for Erlang language, contributed by Brent Fulgham.
* Added support for HTML language files.
* Added support for JavaScript language files.
* Added support for SML (Standard ML) language, contributed by Venkatesh Prasad.
* Added mapping for .plx to Perl.
* Added tags for autocommand groups [Vim, Patch #664685].